crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__apply_argument_multiple.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-28,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 1),
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @15-22 Apply(
                @15-22 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @17-18 Var {
                        module_name: "",
                        ident: "a",
                    },
                    @15-22 Closure(
                        [
                            @17-18 Identifier {
                                ident: "#!0_arg",
                            },
                        ],
                        @15-22 Apply(
                            @15-22 Var {
                                module_name: "Task",
                                ident: "await",
                            },
                            [
                                @20-21 Var {
                                    module_name: "",
                                    ident: "x",
                                },
                                @15-22 Closure(
                                    [
                                        @20-21 Identifier {
                                            ident: "#!1_arg",
                                        },
                                    ],
                                    @15-22 Defs(
                                        Defs {
                                            tags: [
                                                Index(2147483648),
                                            ],
                                            regions: [
                                                @15-22,
                                            ],
                                            space_before: [
                                                Slice(start = 0, length = 0),
                                            ],
                                            space_after: [
                                                Slice(start = 0, length = 0),
                                            ],
                                            spaces: [],
                                            type_defs: [],
                                            value_defs: [
                                                Body(
                                                    @11-12 Identifier {
                                                        ident: "c",
                                                    },
                                                    @15-22 Apply(
                                                        @15-16 Var {
                                                            module_name: "",
                                                            ident: "b",
                                                        },
                                                        [
                                                            @17-18 Var {
                                                                module_name: "",
                                                                ident: "#!0_arg",
                                                            },
                                                            @20-21 Var {
                                                                module_name: "",
                                                                ident: "#!1_arg",
                                                            },
                                                        ],
                                                        Space,
                                                    ),
                                                ),
                                            ],
                                        },
                                        @27-28 Var {
                                            module_name: "",
                                            ident: "c",
                                        },
                                    ),
                                ),
                            ],
                            BangSuffix,
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
