crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__apply_argument_single.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
main = Task.await a \#!a0 -> c = b #!a0
    c
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-25,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @15-19 Apply(
                @15-19 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @17-18 Var {
                        module_name: "",
                        ident: "a",
                    },
                    @15-19 Closure(
                        [
                            @17-18 Identifier {
                                ident: "#!a0",
                            },
                        ],
                        @15-19 Defs(
                            Defs {
                                tags: [
                                    Index(2147483648),
                                ],
                                regions: [
                                    @15-19,
                                ],
                                space_before: [
                                    Slice(start = 0, length = 0),
                                ],
                                space_after: [
                                    Slice(start = 0, length = 0),
                                ],
                                spaces: [],
                                type_defs: [],
                                value_defs: [
                                    Body(
                                        @11-12 Identifier {
                                            ident: "c",
                                        },
                                        @15-19 Apply(
                                            @15-16 Var {
                                                module_name: "",
                                                ident: "b",
                                            },
                                            [
                                                @17-18 Var {
                                                    module_name: "",
                                                    ident: "#!a0",
                                                },
                                            ],
                                            Space,
                                        ),
                                    ),
                                ],
                            },
                            @24-25 Var {
                                module_name: "",
                                ident: "c",
                            },
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
