crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__basic.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-26,
    ],
    space_before: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
    ],
    space_after: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 1 },
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-15 Apply(
                @11-15 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @11-15 Defs(
                        Defs {
                            tags: [
                                EitherIndex(2147483648),
                            ],
                            regions: [
                                @11-15,
                            ],
                            space_before: [
                                Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                            ],
                            space_after: [
                                Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                            ],
                            spaces: [],
                            type_defs: [],
                            value_defs: [
                                AnnotatedBody {
                                    ann_pattern: @11-15 Identifier {
                                        ident: "#!0_stmt",
                                    },
                                    ann_type: @11-15 Apply(
                                        "",
                                        "Task",
                                        [
                                            @11-15 Record {
                                                fields: [],
                                                ext: None,
                                            },
                                            @11-15 Inferred,
                                        ],
                                    ),
                                    lines_between: [],
                                    body_pattern: @11-15 Identifier {
                                        ident: "#!0_stmt",
                                    },
                                    body_expr: @11-15 Var {
                                        module_name: "",
                                        ident: "foo",
                                    },
                                },
                            ],
                        },
                        @11-15 Var {
                            module_name: "",
                            ident: "#!0_stmt",
                        },
                    ),
                    @11-15 Closure(
                        [
                            @11-15 Underscore(
                                "#!stmt",
                            ),
                        ],
                        @21-26 Apply(
                            @21-23 Var {
                                module_name: "",
                                ident: "ok",
                            },
                            [
                                @24-26 Record(
                                    [],
                                ),
                            ],
                            Space,
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
