crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__body_parens_apply.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-42,
    ],
    space_before: [
        Slice { start: 0, length: 0 },
    ],
    space_after: [
        Slice { start: 0, length: 0 },
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @16-35 Apply(
                @16-35 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    Var {
                        module_name: "",
                        ident: "sayMultiple",
                    },
                    @16-35 Closure(
                        [
                            Identifier {
                                ident: "#!0_arg",
                            },
                        ],
                        @16-35 Defs(
                            Defs {
                                tags: [
                                    EitherIndex(2147483648),
                                ],
                                regions: [
                                    @16-35,
                                ],
                                space_before: [
                                    Slice { start: 0, length: 0 },
                                ],
                                space_after: [
                                    Slice { start: 0, length: 0 },
                                ],
                                spaces: [],
                                type_defs: [],
                                value_defs: [
                                    Body(
                                        @11-13 Identifier {
                                            ident: "do",
                                        },
                                        @16-35 Apply(
                                            @17-29 ParensAround(
                                                Var {
                                                    module_name: "",
                                                    ident: "#!0_arg",
                                                },
                                            ),
                                            [
                                                @31-35 Str(
                                                    PlainLine(
                                                        "hi",
                                                    ),
                                                ),
                                            ],
                                            Space,
                                        ),
                                    ),
                                ],
                            },
                            @40-42 Var {
                                module_name: "",
                                ident: "do",
                            },
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
